feat: add ALLOWED_HOSTS to env

--- a/example.env
+++ b/example.env
@@ -21,3 +21,6 @@ SERVER_EMAIL=webmaster@example.com
 
 # Password for your email
 SERVER_EMAIL_PASS=password
+
+# по умолчанию ["*"]
+ALLOWED_HOSTS=127.0.0.1:8000,localhost:8000
